# hotel-booking-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml.example  conftest.py  docker-compose.yml  init_db.sql  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
bookings/: admin.py  models.py  serializers.py  test_bookings.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
hotel_booking/: config.py  settings.py  urls.py
rooms/: admin.py  models.py  serializers.py  test_rooms.py  urls.py  views.py
rooms/migrations/: 0001_initial.py
